# chirp-api-refactoring

./: .gitignore  AUDIT.md  DEVELOPER_SETUP.md  README.md  TASK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  test.yml
.husky/: pre-commit
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: node.yml  python.yml
apps/api/: alembic.ini  moon.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/chirp_api/: main.py
apps/api/chirp_api/db/: __init__.py  models.py  seed.py
apps/api/chirp_api/handlers/: __init__.py  admin_handler.py  auth_handler.py  bookmarks_handler.py  comments_handler.py  feed_handler.py  follows_handler.py  likes_handler.py  notifications_handler.py  posts_handler.py  search_handler.py  users_handler.py
apps/api/chirp_api/middleware/: auth.py  tracing.py
apps/api/chirp_api/services/: admin_service.py  auth_service.py  bookmarks_service.py  comments_service.py  feed_service.py  follows_service.py  likes_service.py  mentions_service.py  notifications_service.py  posts_service.py  query_helpers.py  search_service.py  users_service.py  utils.py
apps/api/tests/: conftest.py  helpers.py
apps/api/tests/handlers/: test_admin_handler.py  test_auth_handler.py  test_comments_handler.py  test_likes_handler.py  test_posts_handler.py
apps/api/tests/services/: test_auth_service.py  test_comments_service.py  test_credential_security.py  test_follows_service.py  test_likes_service.py  test_posts_service.py  test_query_performance.py
apps/client-admin/: moon.yml  (+1 more)
(+17 files in other folders)
